Fix gap around map container

--- a/app/assets/stylesheets/03_pickup_map.scss
+++ b/app/assets/stylesheets/03_pickup_map.scss
@@ -4,14 +4,18 @@
   top: 98px;
   left: 830px;
   right: 0px;
-  bottom: 0px;
   width: 100%;
-  height: 91vh;
+  height: 100%;
+  padding-bottom: 11px;
   background-color: black;
 }
 
 #pickup-container {
-  height: 100%;
+  position: fixed;
+  top: 98px;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .infowindow-photo {
